Changes with Apache 1.3.23

  *) Use "httpready" accept filter rather than "dataready" on
     FreeBSD after 4.1.1-RELEASE where it works correctly.
     [Tony Finch]

  *) Fix incorrect "Content-Length" header in the 416 "range not
     satisfiable" response. [Joe Orton <joe@manyfish.co.uk>]

  *) Add FileETag directive to control fields used when constructing
     an ETag for a file-based resource.  Historically the inode,
     size, and mtimehave been used, but the inode factor broke
     caching for systems with content fan-out across multiple
     back-end servers.  Now the fields used in the construction
     can be controlled by configuration directives.  Minor MMN
     bumped; MMN went from 19990320.10 to 19990320.11.
     [Ken Coar, from a patch by Phil Dietz]

  *) NetWare: Fixed the access forbidden problem when requesting an
     empty directory rather than showing the empty listing.  
     [Charles Goldman, Guenter Knauf <gk@gknw.de>]

  *) Cause Win32 to capture all child-worker process errors in
     Apache to the main server error log, until the child can
     open it's own error logs.  [William Rowe]

  *) Revert mod_negotation's handling of path_info and query_args
     to the 1.3.20 behavior.  PR: 8628, 8582, 8538  [William Rowe]

  *) Modify buff.h and buff.c to enable modules to intercept the
     output byte stream for dynamic page caching. A pointer to a 
     'filter callback' function is added to the end of buff.h. 
     This function, if registered by a module, is called 
     at the top of buff_write() and writev_it_all().
     [Kevin Mallory <kmallory@spidercache.com>]

  *) When the default of 'Group #-1' was changed to 'Group "#-1"',
     the Makefile wasn't updated to recognise the quotation marks.
     [Owen Boyle <obo@bourse.ch>]

  *) Win32: Do not allow threads to continue handling keepalive
     requests after a shutdown or restart has ben signaled.
     [Bill Stoddard]

  *) Win32: Accept OPTIONS * requests.  [Keith Wannamaker]
